2002-06-21  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/convert-ly.py, lily/*.cc, scm/*.scm: change
	visibility-lambda to break-visibility

2002-06-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/bugs/part-combiner.ly: New file.

	* lily/include/spacing-interface.hh: New file.

	* lily/include/spaceable-element.hh: Remove.

	* input/test/script-priority.ly: New file.

2002-06-20  Han-Wen  <hanwen@cs.uu.nl>

	* lily/system.cc (output_lines): kill grobs that are only for spacing.

2002-06-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/fingering-engraver.cc (make_script): 
	* lily/script-engraver.cc (process_music): 
	* lily/text-engraver.cc: 
	(process_acknowledged_grobs): Remove hard coded script-priority.

	* flower/warn.cc: Cleanup.

	* lily/voice-devnull-engraver.cc: Also eat multi-measure rest, a
	spanner now.

	* aclocal.m4: Regenerate.

	* stepmake/aclocal.m4: Also set GUILE_PATCH_LEVEL.

	* config.hh.in: Only set GUILE_MAJOR_VERSION if necessary.
	* lily/include/lily-guile.hh: Only include config.h if necessary.

	* Changelog: cvs changes ml archive test #8.
	
	* lily/slur-engraver.cc: Layout fix.

2002-06-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/engraver-init.ly (RhythmicStaffContext): add
	Dot_column_engraver, resurrect barlines 
	
	* VERSION: 1.5.62 released.

	* lily/engraver-group-engraver.cc (do_announces): rename
	create_grobs () to process_acknowledged_grobs().

	* lily/grob.cc (programming_error): add programming_error with
	origin location.  

	* lily/tuplet-bracket.cc (parallel_beam): robustness check, don't
	fail if a beam doesn't have stems.  

	* lily/engraver-group-engraver.cc (do_announces): scary change in
	calling convention of create_grobs():  no create_grobs() call
	before acknowledge_grobs().

	* lily/sequential-music-iterator.cc (skip): add support for grace
	notes. 

	* lily/music.cc (Music): fix very subtle and nasty memory
	corruption bug. Typical symptom: "programming_error: Rhythmic_req
	has no duration"
